# captcha-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
captcha_toolkit/: __init__.py  _synth.py  base.py  circle.py
examples/: circle_demo.py
tests/: test_circle.py
tests/fixtures/: __init__.py
